--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,17 @@
 .App {
-  text-align: center;
+  /* display: grid;
+  grid-template-columns: 2fr 1fr; */
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
+.home__image{
+  width: 100%;
+  height: 100%;
+  display: block
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
