--- a/src/component/idcard.css
+++ b/src/component/idcard.css
@@ -1,5 +1,92 @@
-.idcard{
-  left: 0;
-  background-color: white;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
+.id-design{
+  text-align: left;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.vectorstock.com%2Froyalty-free-vector%2Fabstract-blue-wave-background-with-stripes-vector-1593285&psig=AOvVaw0XKmRXm6QnmdsGQjbwLYYN&ust=1606594363465000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCOi3m8bEo-0CFQAAAAAdAAAAABAJ');
+  padding: 35px 15px 15px;
+  border-radius: 5px;
+  font-size: x-small;
+
+}
+
+.id-design {
+  margin-top: 0%;
+  width: auto;
+  height: auto;
+  perspective: 1000px;
+ font-size: x-small;
+
+}
+.id-design:after{
+  content: "";
+  position: absolute;
+  top: -40px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 50px;
+  height: 60px;
+  background: #353535;
+  box-shadow: 0 5px 5px rgba(0,0,0,0.125);
+}
+.id-design {
+  position: relative;
+  width: 100%;
+  height: 120%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+
+.id-design{
+  width: 300px;
+  height: 400px;
+  background: #fff;
+  padding: 20px 20px 0;
+  position: relative;
+  border-radius: 5px;
+  text-align: left;
+}
+
+.id-design:before{
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  width: 40%;
+  height: 225px;
+  opacity: 0.8;
+}
+.id-desgin{
+  background-color: lightgrey;
+  width: 300px;
+  border: 15px solid green;
+  padding: 50px;
+  margin: 20px;
+}
+.id-desgin {
+  width: 100px;
+  height: 100px;
+  background: red;
+}
+.idcard{
+  margin-top: 55%;
+  width: auto;
+  height: auto;
+  background: green;
+ 
+}
+
+.id-design{
+  display: block;
+}
