--- a/src/component/form.css
+++ b/src/component/form.css
@@ -1,3 +1,9 @@
+body {
+    font-family: 'Economica', 'Arial', sans-serif;
+    font-size: 18px;
+ background-color: thistle;
+  }
+
 .id-card{
     margin-top: 8%;
 }
@@ -7,4 +13,14 @@
   }
   .form-group{
    display: block;
+  }
+  h1{
+      text-align: center;
+  }
+  form{
+    width: auto;
+    border: 15px solid white;
+    padding: 50px;
+    margin: 20px;
+    background-color:  white;
   }
