--- a/src/component/form.css
+++ b/src/component/form.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Economica', 'Arial', sans-serif;
     font-size: 18px;
- background-color: thistle;
+ background-color: skyblue;
   }
 
 .id-card{
@@ -23,4 +23,14 @@ body {
     padding: 50px;
     margin: 20px;
     background-color:  white;
+  }
+  .form-control-top{
+    border-radius: 25px;
+  background: bisque;
+  padding: 20px;
+  width: 50%;
+  height: 15; 
+    margin-left: 25%;
+    margin-top: 5px;
+    text-align: center;
   }
