--- a/src/component/idcard.css
+++ b/src/component/idcard.css
@@ -6,6 +6,8 @@
 }
 
 .id-design{
+  /* background-color: slateblue; */
+  background-image: url('https://png.pngtree.com/thumb_back/fw800/background/20190718/pngtree-abstract-blue-wave-background-image_283796.jpg');
   text-align: left;
   position: absolute;
   top: 50%;
@@ -14,16 +16,38 @@
   padding: 35px 15px 15px;
   border-radius: 5px;
   font-size: x-small;
-background-image: url('https://png.pngtree.com/thumb_back/fw800/background/20190718/pngtree-abstract-blue-wave-background-image_283796.jpg');
-}
-
-.id-design {
   margin-top: 0%;
   width: auto;
   height: auto;
   perspective: 1000px;
  font-size: x-small;
-
+ position: relative;
+ width: 100%;
+ height: 120%;
+ text-align: center;
+ transition: transform 0.6s;
+ transform-style: preserve-3d;
+ box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+ width: 300px;
+ height: 400px;
+ padding: 20px 20px 0;
+ position: relative;
+ border-radius: 5px;
+ text-align: left;
+}
+h3{
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: initial;
+}
+.college{
+  border-radius: 25px;
+  background-color: cadetblue;
+  width: 100%;
+  height: 10%; 
+margin-left: 0;
+text-align: center;
+font-family: monospace;
 }
 .id-design:after{
   content: "";
@@ -35,15 +59,6 @@ background-image: url('https://png.pngtree.com/thumb_back/fw800/background/20190
   height: 60px;
   background: #353535;
   box-shadow: 0 5px 5px rgba(0,0,0,0.125);
-}
-.id-design {
-  position: relative;
-  width: 100%;
-  height: 120%;
-  text-align: center;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
 
@@ -65,26 +80,37 @@ background-image: url('https://png.pngtree.com/thumb_back/fw800/background/20190
   height: 225px;
   opacity: 0.8;
 }
-.id-desgin{
-  background-color: lightgrey;
-  width: 300px;
-  border: 15px solid white;
-  padding: 50px;
-  margin: 20px;
-}
-.id-desgin {
-  width: 100px;
-  height: 100px;
-  background: red;
-}
+
 .idcard{
-  margin-top: 50%;
+  margin-top: 0%;
   width: auto;
   height: auto;
-  background: white;
+  background-color: #ffffff;
+  border: 1px solid black;
+  opacity: 0.6;;
  
+}
+.idcard p{
+  margin-top: 0%;
+  margin-bottom: 2px;
+  font-weight: bold;
+  color: #000000;
 }
 
 .id-design{
   display: block;
+}
+img {
+  width: 40%;
+  height: 30%;
+  margin-left: 30%;
+  margin-top: 0%;
+}
+.small-box{
+  border-radius: 25px;
+  background: skyblue;
+  width: 100px;
+  height: 5px; 
+  margin-left: 30%;
+  margin-bottom: 0%;
 }
