--- a/src/component/idcard.css
+++ b/src/component/idcard.css
@@ -40,6 +40,9 @@ h3{
   font-family: Arial, Helvetica, sans-serif;
   font-weight: initial;
 }
+h5{
+  font-weight: bolder;
+}
 .college{
   border-radius: 25px;
   background-color: cadetblue;
@@ -48,6 +51,7 @@ h3{
 margin-left: 0;
 text-align: center;
 font-family: monospace;
+margin-top: 5px;
 }
 .id-design:after{
   content: "";
